# opengl-tutorial

./: .gitignore
OpenGL_Template/: main.cpp
tutorial_13/: main.cpp
tutorial_13/includes/common/: controls.hpp
tutorial_13/res/shaders/: NormalMapping.frag
tutorial_13/src/common/: controls.cpp
tutorial_2/: ._main.cpp
tutorial_3/: main.cpp
tutorial_4/: main.cpp
tutorial_5/: main.cpp
tutorial_5/res/imgs/: ._uvmap.DDS  ._uvtemplate.DDS
tutorial_5/src/common/: objloader.cpp  text2D.cpp
tutorial_6/: CMakeLists.txt  main.cpp
tutorial_6/src/: CMakeLists.txt
tutorial_6/src/common/: controls.cpp
tutorial_7/: main.cpp
tutorial_7/includes/common/: ._controls.hpp
tutorial_7/res/models/: cigar.mtl  test.mtl  test2.mtl
tutorial_7/res/shaders/: ._TextureFragmentShader.fragmentshader
tutorial_7/res/textures/: ._cig_mid.dds  ._cig_small.dds  ._cigar.dds  cig_mid.dds  cig_small.dds  cigar.dds
tutorial_7/src/common/: ._controls.cpp  controls.cpp
tutorial_8/: main.cpp
tutorial_8/res/shaders/: StandardShading.frag
